# turinga

./: .gitignore  CMakeLists.txt  Doxyfile  Readme.md
.github/workflows/: cmake.yml
auxilaries/: emulate_rotate.cpp  rotorgenerator.cpp
include/: chacha.hpp  colors.hpp  constants.hpp  encrypt.hpp  encrypt_avx2.hpp  errors.hpp  fileinteraction.hpp  mainerror.hpp  measurement.hpp  rotate.hpp  rotorgenerate.hpp  testrotate.hpp  turinga.hpp  types.hpp
lib/CSPRNG/: CMakeLists.txt
lib/csprng/: CMakeLists.txt
lib/csprng/include/: csprng.hpp
src/: chacha.cpp  colors.cpp  encrypt.cpp  encrypt_avx2.cpp  errors.cpp  fileinteraction.cpp  main.cpp  mainerror.cpp  measurement.cpp  rotate.cpp  rotorgenerate.cpp  testrotate.cpp  turinga.cpp
